src/main/java/org/example/designs/z/taskCollection1/strategy/after/fail/RetryException.java
package org.example.designs.taskCollection.strategy.after.fail;

import org.example.designs.task.AbstractTask;

/**
 * @Program: 11.designs
 * @Author: 海里的鱼
 * @Create: 2024-10-11 09:04
 * @Name: TODO
 * @Desc: TODO
 */
public class RetryException implements IFailStrategy {
    @Override
    public void processError(AbstractTask task) {

    }
}
